--- a/index3.html
+++ b/index3.html
@@ -32,8 +32,9 @@
     <!-- Home Section -->
 <section id="home" class="hero">
     <video autoplay muted loop playsinline class="bg-video">
-        <source src="image/gggvideo.mp4" type="video/mp4">
-    </video>
+    <source src="image/Video Project 2.mp4" type="video/mp4">
+</video>
+
 
     <div class="hero-content">
         <h2>Welcome to Game Grab Glory</h2>
